# M1EADL-CICD

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: github-actions-workflow.yml
src/cicdtest/: main.py
src/cicdtest/Class/: SimpleMath.py
tests/: test_simple_math.py
